# baby-project-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  ALERTS.md  BUILD.md  Baby Project Manager6.py  COMMANDS.md  Control proyectos.bpm  Proyectos_epm.bpm  README.md  README_BUILD.md  ROADMAP.md  Road Map.md  STRUCTURE.md  baby copy.py  baby.py  baby4.py  baby6.py  build_cx-freeze_executable_windows.py  build_to_distribution.py  build_yt-dlp_executable_linux.py  build_yt-dlp_executable_windows.py  check_windows_deps.py  environment_linux.yaml  environment_windows.yaml  file_gui.py  filter_util.py  hipervinculo.py  loading_animation_widget.py  main_window.spec  mpp_extractor.py  pdf.py  pdf_extractor.py  pdf_gui.py  pmm.py  proyectos_prueba.bpm  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  (+4 more)
.github/workflows/: ci.yml
Archivos ejemplo/: Lista de chequeo oportunidades de mejora.xlsx
Cronogramas/: SACOA2_Seguimiento Septiembre 2024.xlsx  SACOA_Seguimiento Septiembre 2024.xlsx
Imagenes/: Imagenes.xcf
baby1/: delegates.py  floating_menu.py  gantt.py  hyperlink_text_edit.py  main.py  main_window.py  models.py  task_table_widget.py
baby2/: delegates.py  gantt_views.py  hipervinculo.py  main.py  main_window.py  models.py  table_views.py  utils.py
build_system/: README.md  build_cx-freeze_executable_windows.py  build_linux_executable.py  build_nuitka_linux.py  build_nuitka_windows.py  build_pyinstaller_linux.py  build_pyinstaller_windows.py  build_to_distribution.py  build_windows_executable.py  check_windows_deps.py  release_packaging.py
docs/: Configuracion de entorno virtual de Java.txt  Control proyectos.bpm  Enviroment Anaconda baby.yaml  Listado de errores.txt  crear_ejecutable_cx_Freeze_windows.md  crear_ejecutable_linux.md  crear_ejecutable_pyinstaller_linux.md  crear_ejecutable_pyinstaller_windows.md  crear_ejecutable_windows.md
docs/Example schedule/: EXPVA-FO-F01-ADM-CRN-01_con permisos2.docx  (+1 more)
scratch/: debug_commands.py  readme.md
src/: about_dialog.py  alert_manager.py  alerts_dialog.py  baby.py  command_system.py  config_manager.py  delegates.py  file_gui.py  filter_util.py  gantt_views.py  global_alerts_dialog.py  hipervinculo.py  jvm_manager.py  loading.html  loading_animation_widget.py  main.py  main_window.py  models.py  mpp_extractor.py  pdf_extractor.py  pdf_security_checker.py  report_dialog.py  resource_helper.py  secrets_loader.py  startup_manager.py  table_views.py  task_operations_mixin.py  task_reminder_dialog.py  version.py  xlsx_extractor.py  xlsx_security_checker.py
tests/: conftest.py  debug_commands.py  test_atomic_io.py  test_auto.py  test_command_manager.py  test_commands.py  test_manual.py  test_models.py  test_offset.py  test_simple.py  test_update_manager.py
(+49 files in other folders)
