[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-project-manager"
description = "Lightweight project manager and interactive Gantt chart tool built with PySide6."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Rudull" }]
keywords = ["gantt", "project-management", "pyside6", "scheduling"]
dynamic = ["version"]

# Runtime dependencies only. Build/dev tooling lives in optional-dependencies
# so `pip install baby-project-manager` does not pull in PyInstaller/Nuitka.
dependencies = [
    "PySide6>=6.4.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.10",
    "pdfplumber>=0.7.0",
    "PyPDF2>=3.0.0",
    "jpype1>=1.4.0",
    "mpxj>=10.0.0",
    "workalendar>=16.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
# Tools needed to freeze the app into a distributable executable.
build = [
    "PyInstaller>=5.7.0",
    "nuitka>=2.4.4",
    "ordered-set>=4.1.0",
    "zstandard>=0.21.0",
]
# Tools for local development and CI.
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.8.0",
]
# Optional platform integrations.
windows = ["pywin32>=306; sys_platform == 'win32'"]

[project.urls]
Homepage = "https://github.com/Rudull/baby-project-manager"
Repository = "https://github.com/Rudull/baby-project-manager"
Issues = "https://github.com/Rudull/baby-project-manager/issues"

[project.scripts]
baby-project-manager = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "version"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "ui*", "utils*", "updater*"]

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced here
    "B008",  # `def m(self, parent=QModelIndex())` is the standard Qt model idiom
]

[tool.ruff.lint.per-file-ignores]
# main.py must mutate sys.path before importing the app packages so that
# `python src/main.py` works without installation.
"src/main.py" = ["E402"]
# Test files favour readability over import-ordering strictness.
"tests/*" = ["E402"]

[tool.pytest.ini_options]
# Tests import the app modules (core, ui, ...) as top-level packages, matching
# how the app runs. pythonpath makes that work without installation.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
files = ["src"]
